--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.7.3",
+    "to-words": "^3.6.1",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.1"
   },
